# Controller

./: .gitignore  .gitmodules  <  LICENSE  README.md
.github/workflows/: main.yml
Arduino/ProgramRecovid/: main.h  main.ino  sensor.h
Arduino/ProgrammeInit/: ProgrammeInit.ino  control.cpp  control.hpp  frame.cpp  frame.hpp  types.h
Arduino/ProgrammeInit/mbed/: scheduling.cpp  scheduling.h
Arduino/ProgrammeInit/samd/: scheduling.cpp  scheduling.h
C_Controller/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  C_Controller.exe.vcxproj  C_Controller.exe.vcxproj.filters  C_Controller.recovid_revB.elf  C_Controller.recovid_revB.elf.hex  C_Controller.sln  C_Controller.stm32f303.elf  C_Controller.stm32f303.elf.hex  FreeRTOSConfig.h  Makefile  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  TaskAlarm.c  TaskMessageManagement.c  TaskRespirationCycle.c  TaskRespirationCycle.c.orig  TaskSensing.c  TaskSensing.h  TaskTimers.c  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  alarms.c  alarms.h  breathing.c  breathing.h  cmake_install.cmake  common.h  compile_commands.json  compile_flags.txt  compute_motor.c  configuration.c  configuration.h  controller.c  controller.h  (+27 more)
C_Controller/include/: breathing.h  common.h  compute_motor.h  controller.h  defaults.h  hmi.h  monitoring.h  platform.h  recovid.h  settings.h
C_Controller/lowlevel/: CMakeLists.txt  CTestTestfile.cmake  Makefile  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
C_Controller/lowlevel/include/: FreeRTOSConfig.h  flash.h  hardware_real.h  hardware_serial.h  hardware_simulation.h  i2c.h  leds.h  lowlevel.h  recovid_revB.h  simple_indicators.h
C_Controller/lowlevel/native/: CMakeLists.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  hardware_serial.c  hardware_simulation.c  i2c.c  leds.c  lowlevel.vcxproj  lowlevel.vcxproj.filters  lowlevel_simulation.c  native.cmake  native.mk  simple_indicators.c  ups.c  vassertcall.c
C_Controller/lowlevel/stm32f303/: CMakeLists.txt  Makefile  Toolchain.cmake  buzzer.c  flash.c  gpio.c  hardware_real.c  hardware_serial.c  hardware_simulation.c  hmi_uart.c  i2c.c  ihm.c  indicators.c  install_udev.sh  leds.c  lights.c  main.h  motor.c  motor.c.orig  motor_pep.c  pep_valve.c  recovid_revB.c  recovid_revB.h  sensors.c  simple_indicators.c  simple_indicators.h  stm32f303.cmake  stm32f303.mk  stm32f3xx_hal_msp.c  stm32f3xx_hal_msp_tick.c  stm32f3xx_it.c  stm32f3xx_it.h  time.c
C_Controller/lowlevel/stm32f303/FreeRTOS/: CMakeLists.txt  Makefile
C_Controller/lowlevel/stm32f303/FreeRTOS/Source/include/: task.h
C_Controller/lowlevel/stm32f303/HAL/: CMakeLists.txt  Makefile  stm32f303retx.ld  stm32f3xx_hal_conf.h
C_Controller/lowlevel/stm32f303/HAL/Drivers/STM32F3xx_HAL_Driver/Inc/: stm32f3xx_hal_def.h
C_Controller/src/: breathing.c  compute_motor.c  controller.c  hmi.c  main.c  monitoring.c  protocol.c
C_Controller/tests/: main.c
C_Controller/to_be_ported/: controller_.h
Controller-V1-F303/: .cproject  .gitignore  .mxproject  .project  Recovid-F303 Debug.launch  Recovid-F303.ioc  Recovid-F303.launch
Controller-V1-F303/Controller/Inc/: controller.h  motor.h  sensors.h  utils.h
Controller-V1-F303/Controller/Src/: controller.c  motor.c  pid.c  sensors.c  utils.c
Controller-V1-F303/Core/Inc/: main.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h
Controller-V1-F303/Core/Src/: main.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c
Controller-V1-F303/Debug/: Recovid-F303.elf  Recovid-F303.list  Recovid-F303.map  makefile  objects.list  sources.mk
Controller-V1-F303/IHMComm/Inc/: hardware_simulation.h  (+2 more)
ProgramRecovid/: main.h  main.ino  sensor.h
ProgramRecovid/main/: main.ino
SensorTest/: .gitignore
SensorTest/embedded/: CMakeLists.txt  platformio.ini
SensorTest/python/: TSI-calibrate.py  TSI-calibrateV2.py  fitadrien.py  interpTSI.py  interpTSIV2.py  live-plotter.py  plotter.py  recorder.py
design/: DESIGN.md
docs/SDP610/: Notes SDP610.md
freertos_recovid/: Makefile  README.md
freertos_recovid/main/: TaskAlarmSending.ino  TaskBlink.ino  TaskDataSending.ino  TaskDigitalRead.ino  TaskMediumAlarm.ino  TaskMessageManagement.ino  TaskRespirationCycle.ino  TaskSensing.ino  TaskSerialSending.ino  TaskUrgentAlarm.ino  main.ino  struct.h  tasks.h  tasks.ino  variables.h  variables.ino
sources/: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  adrienfarrugia_yahoo  adrienfarrugia_yahoo.pub  compile_commands.json  compile_flags.txt  output.map
sources/applications/CalibrationSam/: CMakeLists.txt
sources/applications/CalibrationSam/include/recovid_revB/: application_defs.h
sources/applications/CalibrationSam/src/: application.c  application.h  calibration.c  calibration.h  defaults.h  hmi.c  hmi.h  protocol.c  protocol.h
sources/applications/Calibration_Sam/: CMakeLists.txt
sources/applications/Calibration_Sam/include/recovid_revB/: application_defs.h
sources/applications/Calibration_Sam/src/: calibration.c  config.h  hmi.c  protocol.c  protocol.h
sources/applications/Controller/: CMakeLists.txt
sources/applications/Controller/include/recovid_revB/: application_defs.h
sources/applications/Controller/src/: adaptation.h  breathing.c  breathing.h  compute_motor.c  config.h  controller.c  controller.h  defaults.h  hmi.c  template.h
sources/applications/Controller/src/Sam/: adaptation.c
sources/include/: application.h  breathing.h  common.h  config.h  controller.h  defaults.h  hmi.h  log_timings.h  monitoring.h  platform.h
sources/src/: adaptation.h  auto_calib.c  breathing.c  breathing.h  compute_motor.c  compute_motor.h  config.h  const_calibs.h  controller.c  controller.h  defaults.h  flow_adaptation.c  hmi.c  hmi.h  main.c  monitoring.c  monitoring.h  pid_adrien.c  protocol.c  protocol.h  template.c
sources/src/adrien/: adaptation.c  calib_adrien.c  const_calibs.h
sources/src/pid_MMM/: PID.c  PID.h  adaptation.c
sources/src/sam/: adaptation.c
sources/tests/: main.c
sources/to_be_ported/: alarms.c  alarms.h
(+43 files in other folders)
