set(LOWLEVEL_INC_DIR ${CMAKE_CURRENT_LIST_DIR}/include)
set(LOWLEVEL_SRC_DIR ${CMAKE_CURRENT_LIST_DIR}/${TARGET})

if(CMAKE_HOST_WIN32)
    set(LOWLEVEL_INC_DIR ${LOWLEVEL_INC_DIR} PARENT_SCOPE)
    set(LOWLEVEL_SRC_DIR ${LOWLEVEL_SRC_DIR} PARENT_SCOPE)
endif()

add_subdirectory(${LOWLEVEL_SRC_DIR})
